--- a/DAPS/config/users.yml
+++ b/DAPS/config/users.yml
@@ -3,4 +3,4 @@
   attributes:
   - key: omejdn
     value: admin
-  password: "$2a$12$UfVgtPAiF/4V8BhnnCvOQulD7ic7EZMFUCDdfwMFxSTtuNNs53XyO"
+  password: "$2a$12$VPod43dZR3hRey.40d.XaeNRm4KG4DZ4dCxdWR2lpzwrMKeDvILz2"
