--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,21 @@ services:
       - connector-datab:/var/lib/postgresql/data
     networks:
       - local
-      
+
+  postgresc:
+    image: postgres:13
+    container_name: 'postgresc-container'
+    ports:
+      - "5434:5432"
+    environment:
+      - POSTGRES_USER=postgresuserc
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=connectorcdb
+    volumes:
+      - connector-datac:/var/lib/postgresql/data
+    networks:
+      - local
+
   connectora:
     image: ghcr.io/international-data-spaces-association/dataspace-connector:8.0.2
     container_name: connectora
@@ -130,6 +144,35 @@ services:
     depends_on:
       - postgresb
 
+  connectorc:
+    image: ghcr.io/international-data-spaces-association/dataspace-connector:8.0.2
+    container_name: connectorc
+    ports:
+      - 8082:8082
+    environment:
+      - CONFIGURATION_PATH=/config/config.json
+      - SERVER_PORT=8082
+      - DAPS_URL=https://omejdn
+      - DAPS_TOKEN_URL=https://omejdn/auth/token
+      - DAPS_KEY_URL=https://omejdn/auth/jwks.json
+      - DAPS_INCOMING_DAT_DEFAULT_WELLKNOWN=/jwks.json
+      - SERVER_SSL_KEY-STORE=file:///conf/connectorC.p12
+      # Define the PostgreSQL setup
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgresc:5432/connectorcdb
+      - SPRING_DATASOURCE_PLATFORM=postgres
+      - SPRING_DATASOURCE_DRIVERCLASSNAME=org.postgresql.Driver
+      - SPRING_DATASOURCE_USERNAME=postgresuserc
+      - SPRING_DATASOURCE_PASSWORD=password
+      - SPRING_JPA_DATABASE_PLATFORM=org.hibernate.dialect.PostgreSQLDialect
+    volumes:
+      - ./DataspaceConnectorC/conf/config.json:/config/config.json
+      - ./DataspaceConnectorC/conf/connectorC.p12:/conf/connectorC.p12
+      - ./DataspaceConnectorC/conf/truststore.p12:/config/truststore.p12
+    networks:
+      - local
+    depends_on:
+      - postgresc
+
   broker-reverseproxy:
     image: registry.gitlab.cc-asp.fraunhofer.de/eis-ids/broker-open/reverseproxy
     container_name: broker-reverseproxy
@@ -152,8 +195,11 @@ services:
       - ELASTICSEARCH_HOSTNAME=broker-elasticsearch
       - SHACL_VALIDATION=true
       - DAPS_VALIDATE_INCOMING=true
-      - COMPONENT_URI=https://broker-reverseproxy/
-      - COMPONENT_CATALOGURI=https://broker-reverseproxy/connectors/
+      - COMPONENT_URI=https://localhost/
+      - COMPONENT_CATALOGURI=https://localhost/connectors/
+#      - COMPONENT_URI=https://broker-reverseproxy/
+#      - COMPONENT_CATALOGURI=https://broker-reverseproxy/connectors/
+
       - DAPS_URL=https://omejdn/auth/token
     expose:
       - "8080"
@@ -165,8 +211,8 @@ services:
     container_name: broker-fuseki
     volumes:
       - broker-fuseki:/fuseki
-    expose:
-      - "3030"
+    ports:
+      - "3030:3030"
     networks:
       - local
 
@@ -174,6 +220,7 @@ volumes:
   broker-fuseki: {}
   connector-dataa: {}
   connector-datab: {}
+  connector-datac: {}
 
 networks:
   local:
