--- a/DAPS/config/users.yml
+++ b/DAPS/config/users.yml
@@ -3,4 +3,4 @@
   attributes:
   - key: omejdn
     value: admin
-  password: "$2a$12$VPod43dZR3hRey.40d.XaeNRm4KG4DZ4dCxdWR2lpzwrMKeDvILz2"
+  password: "$2a$12$jLTvZB7jtTXKQIVbJmXAhemXTv4UCMrWAILE4gsgEVWxx04HOURYa"
